# pc_landing

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  obsh.sh  polet.sh  test_cpp_prog.cpp
include/src/: pc_landing.cpp  pc_landing.h  pc_main.cpp
launch/: search.launch  video_map.launch
pc_cpp/src/: pc_landing.cpp  pc_main.cpp
pc_package/launch/: search.launch
pc_ros_package/: CMakeLists.txt  package.xml
pc_ros_package/launch/: search.launch  video_map.launch
pc_ros_package/msg/: Landing.msg  LandingCoordinates.msg
pc_ros_package/scripts/: landing_point.cpp
pc_ros_package/src/: landing_point.cpp  pc_detection_SLZ.cpp  pc_detection_slz.cpp  pc_distance.cpp  pc_landing.h  pc_search_point.cpp  pc_searching_place.cpp
pc_ros_package/srv/: LandingPoint.srv
scripts/: landing_point.cpp  organize.cpp
src/: pc_searching_place.cpp
srv/: LandingPoint.srv  OrganizePointCloud.srv
